# marist-time-machine

./: .env.example  .gitignore  README.md  deep_face.py  docker-compose.coolify.yml  docker-compose.override.yml  docker-compose.yml  hello_milvus.py  requirements.txt
api/: Dockerfile  pyproject.toml
api/app/: config.py  db.py  deps.py  main.py  scheduler.py
api/app/routers/: faces.py  me.py  people.py  photos.py  reports.py  search.py  songs.py  suggestions.py
api/app/services/: clustering.py  media.py  ml_client.py  storage.py  terms.py  video.py  youtube.py
ml/: Dockerfile  pyproject.toml
ml/app/: config.py  engine.py  main.py
mobile/: capacitor.config.ts  index.html  ionic.config.json  package-lock.json  package.json
mobile/src/: main.ts
scripts/: .coolify.env.example  coolify-deploy.sh  coolify-fix-ssh.sh
server/: config.py  main.py
server/api/: auth.py  delete.py  download.py  images.py  list.py  minio.py  upload.py
server/models/: user_models.py
server/modules/: db.py
server/services/: auth_service.py  email_service.py  jwt_service.py  milvus_service.py  minio_service.py  mongo_service.py
supabase/: schema.sql
supabase/init/: 00-extensions.sql
supabase/kong/: kong.yml
supabase/migrations/: 20260517_000_schema.sql  20260517_001_rls.sql  20260517_002_storage.sql  20260518_000_photo_hash.sql  20260518_001_name_suggestions.sql  20260518_002_user_profiles.sql  20260518_003_people_grad_info.sql  20260518_004_songs.sql  (+6 more)
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+57 files in other folders)
