[project]
name = "marist-time-machine-api"
version = "0.1.0"
description = "Marist Time Machine business API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
    "asyncpg>=0.30",
    "httpx>=0.28",
    "pyjwt[crypto]>=2.9",
    "supabase>=2.9",
    "pgvector>=0.3.6",
    "orjson>=3.10",
    "apscheduler>=3.10.4",
    "Pillow>=10.4",
]

[tool.uv]
package = false
