[project]
name = "marist-time-machine-ml"
version = "0.1.0"
description = "InsightFace ONNX face recognition service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "python-multipart>=0.0.12",
    "numpy>=1.26,<2.0",
    "opencv-python-headless>=4.10",
    "onnxruntime>=1.20",
    "insightface>=0.7.3",
    "pillow>=11.0",
]

[tool.uv]
package = false
